--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends request.is_ajax|yesno:'ajax.html,base.html' %}
 
 {% block title %}
-dashboard - dopepod
+dopepod
 {% endblock %}
 
 {% block center-stage %}
