--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -1,74 +1,147 @@
-<div class="col-auto col-lg-5" id="dopebar-l">
-  <ul>
+<div class="col-3 col-lg-5" id="dopebar-l">
+  <a class="dopebar-link dopebar-icon d-inline-block d-xl-none" data-toggle="collapse" href="#dopebar-collapse" aria-expanded="false" aria-controls="results-collapse-{{ results.drop }}" aria-label="dopebar-collapse">
+    <i class="fas fa-bars"></i>
+  </a>
+  <ul class="d-none d-xl-inline-block">
     <li>
-      <a class="nav-link-dope charts-link d-none d-xl-inline-block" href="{% url 'charts' %}">
+      <a class="dopebar-link charts-link" href="{% url 'charts' %}">
         Charts
       </a>
     </li>
     <li>
-      <a class="nav-link-dope browse-link d-none d-xl-inline-block" href="{% url 'browse' %}">
+      <a class="dopebar-link browse-link" href="{% url 'browse' %}">
         Browse
       </a>
     </li>
     {% if user.is_authenticated %}
-    <li>
-      <a class="nav-link-dope index-link d-none d-xl-inline-block" href="/">
-        Dashboard
-      </a>
-    </li>
-    <li>
-      <a class="nav-link-dope subscriptions-link d-none d-xl-inline-block" href="{% url 'subscriptions' %}">
-        Subscriptions
-      </a>
-    </li>
+      <li>
+        <a class="dopebar-link index-link" href="/">
+          Dashboard
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link subscriptions-link" href="{% url 'subscriptions' %}">
+          Subscriptions
+        </a>
+      </li>
     {% endif %}
   </ul>
 </div>
-<div class="col-lg-2 d-none d-lg-block" id="dopebar-c">
+<div class="col-6 col-lg-2" id="dopebar-c">
   {% include 'logo.html' %}
 </div>
-<div class="col col-lg-5" id="dopebar-r">
-  <ul>
+<div class="col-3 col-lg-5" id="dopebar-r">
+  {% if user.is_authenticated %}
+    <form class="logout-form d-inline-block d-xl-none" method="POST" action="{% url 'logout' %}">
+      {% csrf_token %}
+      <button class="dopebar-link ajax-logout dopebar-icon" type="submit">
+        <i class="fas fa-sign-out-alt"></i>
+      </button>
+    </form>
+  {% else %}
+    <a class="dopebar-link ajax-login dopebar-icon d-inline-block d-xl-none" href="/?view=login">
+      <i class="fas fa-sign-out-alt"></i>
+    </a>
+  {% endif %}
+  <ul class="d-none d-xl-inline-block">
     {% if user.is_authenticated %}
+      <li>
+        <a class="dopebar-link settings-link" href="{% url 'settings' %}">
+          Settings
+        </a>
+      </li>
+      <li>
+        <form class="logout-form" method="POST" action="{% url 'logout' %}">
+          {% csrf_token %}
+          <button class="dopebar-link ajax-logout" type="submit">
+            Logout
+          </button>
+        </form>
+      </li>
+    {% else %}
+      <li>
+        <a class="dopebar-link ajax-login" href="/?view=login">
+          Login
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link ajax-signup" href="/?view=signup">
+          Signup
+        </a>
+      </li>
+    {% endif %}
     <li>
-      <a class="nav-link-dope settings-link d-none d-xl-inline-block" href="{% url 'settings' %}">
-        Settings
-      </a>
-    </li>
-    <li>
-      <form class="logout-form" method="POST" action="{% url 'logout' %}">
-        {% csrf_token %}
-        <button class="nav-link-dope ajax-logout d-none d-xl-inline-block" type="submit">
-          Logout
+      <form class="form-inline search-form d-none d-xl-inline-block" method="GET" action="{% url 'search' %}">
+        <label for="q" class="sr-only">Search for podcasts</label>
+        <input class="form-control q" type="text" name="q" type="search" placeholder="Search for podcasts"
+        aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+        <button class="search-button" type="submit">
+          <span>
+            Go
+          </span>
         </button>
       </form>
     </li>
+  </ul>
+</div>
+<div class="collapse" id="dopebar-collapse">
+  <ul class="d-inline-block d-xl-none">
+    <li>
+      <a class="dopebar-link charts-link" href="{% url 'charts' %}">
+        Charts
+      </a>
+    </li>
+    <li>
+      <a class="dopebar-link browse-link" href="{% url 'browse' %}">
+        Browse
+      </a>
+    </li>
+    {% if user.is_authenticated %}
+      <li>
+        <a class="dopebar-link index-link" href="/">
+          Dashboard
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link subscriptions-link" href="{% url 'subscriptions' %}">
+          Subscriptions
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link settings-link" href="{% url 'settings' %}">
+          Settings
+        </a>
+      </li>
+      <li>
+        <form class="logout-form" method="POST" action="{% url 'logout' %}">
+          {% csrf_token %}
+          <button class="dopebar-link ajax-logout d-inline-block d-xl-none" type="submit">
+            Logout
+          </button>
+        </form>
+      </li>
     {% else %}
-    <li>
-      <a class="nav-link-dope ajax-login d-none d-xl-inline-block" href="/?view=login">
-        Login
-      </a>
-    </li>
-    <li>
-      <a class="nav-link-dope ajax-signup d-none d-xl-inline-block" href="/?view=signup">
-        Signup
-      </a>
-    </li>
+      <li>
+        <a class="dopebar-link ajax-login d-inline-block d-xl-none" href="/?view=login">
+          Login
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link ajax-signup d-inline-block d-xl-none" href="/?view=signup">
+          Signup
+        </a>
+      </li>
     {% endif %}
     <li>
-      <form class="form-inline" id="search-form" method="GET" action="{% url 'search' %}">
-        <div class="input-group" id="search-field">
-          <label for="q" class="sr-only">Search for podcasts</label>
-          <input class="form-control" type="text" name="q" id="q"
-          type="search" placeholder="Search for podcasts"
-          aria-label="Search for podcasts" maxlength="30" autocomplete="off"
-          accept-charset="utf-8" required>
-          <button id="search-button" type="submit">
-            <span>
-              Go
-            </span>
-          </button>
-        </div>
+      <form class="form-inline search-form d-inline-block d-xl-none" method="GET" action="{% url 'search' %}">
+        <label for="q" class="sr-only">Search for podcasts</label>
+        <input class="form-control q" type="text" name="q" type="search" placeholder="Search for podcasts"
+        aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+        <button class="search-button" type="submit">
+          <span>
+            Go
+          </span>
+        </button>
       </form>
     </li>
   </ul>
