--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -30,28 +30,28 @@ Listen to episodes of {{ podcast.title }} on dopepod
     <div class="col-12 col-lg-2" id="showpod-r">
       <ul class="showpod-side-list">
         {% if podcast.global_rank %}
-        <li>
-          <span class="global_rank">
-            #{{ podcast.global_rank }} in
-            podcasts
-          </span>
-        </li>
+          <li>
+            <span class="global_rank">
+              #{{ podcast.global_rank }} in
+              podcasts
+            </span>
+          </li>
         {% endif %}
         {% if podcast.genre_rank %}
-        <li>
-          <span class="genre_rank">
-            #{{ podcast.genre_rank }} in
-            {% if podcast.genre.supergenre %}
-            <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-              {{ podcast.genre.supergenre }}
-            </a>
-            {% else %}
-            <a href="/charts/?genre={{ podcast.genre.url_format }}">
-              {{ podcast.genre }}
+          <li>
+            <span class="genre_rank">
+              #{{ podcast.genre_rank }} in
+              {% if podcast.genre.supergenre %}
+                <a class="browse-link" href="/browse/?genre={{ podcast.genre.supergenre.url_format }}">
+                  {{ podcast.genre.supergenre }}
+                </a>
+              {% else %}
+                <a class="browse-link" href="/browse/?genre={{ podcast.genre.url_format }}">
+                  {{ podcast.genre }}
+                </a>
               {% endif %}
-            </a>
-          </span>
-        </li>
+            </span>
+          </li>
         {% endif %}
         <li>
           <span class="subscriber">
@@ -61,22 +61,28 @@ Listen to episodes of {{ podcast.title }} on dopepod
             {{ podcast.n_subscribers }}
           </span>
         </li>
-        {% if not podcast.genre_rank and not podcast.global_rank %}
         <li>
-          <span class="genre_rank">
+          <span class="genre">
             Genre:
             {% if podcast.genre.supergenre %}
-            <a href="/charts/?genre={{ podcast.genre.supergenre.url_format }}">
-              {{ podcast.genre.supergenre }}
-            </a>
+              <a class="browse-link" href="/browse/?genre={{ podcast.genre.supergenre.url_format }}">
+                {{ podcast.genre.supergenre }}
+              </a>
             {% else %}
-            <a href="/charts/?genre={{ podcast.genre.url_format }}">
-              {{ podcast.genre }}
-            </a>
+              <a class="browse-link" href="/browse/?genre={{ podcast.genre.url_format }}">
+                {{ podcast.genre }}
+              </a>
             {% endif %}
           </span>
         </li>
-        {% endif %}
+        <li>
+          <span class="language">
+            Language:
+            <a class="browse-link" href="/browse/?language={{ podcast.language.url_format }}">
+              {{ podcast.language }}
+            </a>
+          </span>
+        </li>
         <li>
           <span>
             Content:
