--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -1,4 +1,4 @@
-<div class="col results color-5-trans">
+<div class="col-12 results color-5-trans">
   <div class="row results-bar">
     <div class="col-12 results-header">
       {% if results.extra_options %}
