--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,18 +1,17 @@
 {% if player.episode %}
-<div class="container">
-  <div class="row color-5" id="player-wrapper">
-  <div class="col" id="player-top">
+<div class="row color-5" id="player-wrapper">
+  <div class="col-12" id="player-top">
     <a class="showpod" id="player-image" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
-      <img class="img-fluid" src="//images.weserv.nl/?url={{ player.episode.podcast.artworkUrl }}70x70bb.jpg&w=70&h=70&t=absolute" />
+      <img class="img-fluid" src="//images.weserv.nl/?url={{ player.episode.podcast.artworkUrl }}300x300bb.jpg&w=100&h=100&t=absolute" />
     </a>
     <div id="player-buttons">
-    <a class="btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
-      <i class="fas fa-minus-circle icon"></i>
-    </a>
-    <a class="btn-dope player-button" id="player-close" href="#" aria-label="Close">
-      <i class="fas fa-times-circle icon"></i>
-    </a>
-  </div>
+      <a class="btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
+        <i class="fas fa-minus-circle icon"></i>
+      </a>
+      <a class="btn-dope player-button" id="player-close" href="#" aria-label="Close">
+        <i class="fas fa-times-circle icon"></i>
+      </a>
+    </div>
     <div id="player-title">
       <span>
         {{ player.episode.podcast.title }}
@@ -24,16 +23,15 @@
       </span>
     </div>
     <div id="player-episode">
-      <span>
-        {{ player.episode.title }}
-      </span>
-    </div>
+    <span>
+      {{ player.episode.title }}
+    </span>
+  </div>
   </div>
   <div class="col-12" id="player-bottom">
     <audio id="audio-el" controls preload="metadata" autoplay>
       <source src="{{ player.episode.url }}"/>
     </audio>
   </div>
-</div>
 </div>
 {% endif %}
