--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -27,10 +27,12 @@
     <div class="container-fluid">
       <!-- MULTIBAR -->
       <nav class="navbar fixed-top color-4-trans" id="dopebar">
-        {% include 'dopebar.html' %}
+        <div class="container">
+          {% include 'dopebar.html' %}
+        </div>
       </nav>
       <div class="row" id="main-wrapper">
-        <div class="col-12 order-3 col-xl-6 col-xxl-3 order-xxl-1" id="left">
+        <div class="col-12 order-3 col-xl-3" id="left">
           <div class="row" id="charts">
             {% if charts %}
               {% with charts as results %}
@@ -40,18 +42,15 @@
           </div>
         </div>
         <!-- MAIN -->
-        <div class="col-12 order-1 col-xl-12 col-xxl-6 order-xxl-2" id="main">
+        <div class="col-12 order-1 col-xl-6 offset-xl-3" id="main">
           <!-- CENTER STAGE -->
           <div class="row" id="center-stage">
             {% block center-stage %}
             {% endblock %}
           </div>
-          <!-- RESULTS -->
-          <div class="row" id="news">
-          </div>
         </div>
         <!-- CHARTS -->
-        <div class="col-12 order-2 col-xl-6 col-xxl-3 order-xxl-3" id="right">
+        <div class="col-12 order-2 col-xl-3 offset-xl-3" id="right">
           <div class="row" id="last-played">
             {% if last_played %}
               {% include 'last_played.html' %}
