--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 last-played-header">
       <h1>
-        Last played on dopepod
+        Last played
       </h1>
     </div>
   </div>
