--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -30,7 +30,7 @@
           {{ episode.title }}
         </td>
         <td>
-          {{ episode.pubDate|date:'d M Y' }}
+          {{ episode.pubDate }}
         </td>
         <td>
           {% if episode.size %}
