--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -30,7 +30,7 @@
           {{ episode.title }}
         </td>
         <td>
-          {{ episode.pubDate }}
+          {{ episode.date }}
         </td>
         <td>
           {% if episode.size %}
@@ -54,24 +54,17 @@
           {% else %}
             <div class="collapse more-collapse show" id="more-collapse{{ forloop.counter }}">
           {% endif %}
-            <span class="episode-summary">
-              {% if episode.summary %}
-                {{ episode.summary }}
+            <span class="episode-description">
+              {% if episode.description %}
+                {{ episode.description }}
               {% else %}
-                No summary
+                No description
               {% endif %}
             </span>
             <div class="episode-buttons">
               <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
                 {% csrf_token %}
-                <input type="hidden" name="url" value="{{ episode.url }}" />
-                <input type="hidden" name="type" value="{{ episode.type }}" />
-                <input type="hidden" name="title" value="{{ episode.title }}" />
-                <input type="hidden" name="date" value="{{ episode.pubDate|date:'r' }}" />
-                <input type="hidden" name="podid" value="{{ podcast.podid }}" />
-                <input type="hidden" name="length" value="{{ episode.length }}" />
-                <input type="hidden" name="size" value="{{ episode.size }}" />
-                <input type="hidden" name="summary" value="{{ episode.summary }}" />
+                <input type="hidden" name="signature" value="{{ episode.signature }}" />
                 <button class="btn-dope play-button active" type="submit">
                   Play
                 </button>
