--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -40,24 +40,17 @@
         </div>
         <div class="last-played-bottom">
           <div class="collapse last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
-            <span class="last-played-summary">
-              {% if episode.summary %}
-              {{ episode.summary }}
+            <span class="last-played-description">
+              {% if episode.description %}
+              {{ episode.description }}
               {% else %}
-              No summary
+              No description
               {% endif %}
             </span>
             <div class="last-played-buttons">
               <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
                 {% csrf_token %}
-                <input type="hidden" name="url" value="{{ episode.url }}" />
-                <input type="hidden" name="type" value="{{ episode.type }}" />
-                <input type="hidden" name="title" value="{{ episode.title }}" />
-                <input type="hidden" name="date" value="{{ episode.pubDate }}" />
-                <input type="hidden" name="podid" value="{{ episode.podcast.podid }}" />
-                <input type="hidden" name="length" value="{{ episode.length }}" />
-                <input type="hidden" name="size" value="{{ episode.size }}" />
-                <input type="hidden" name="summary" value="{{ episode.summary }}" />
+                <input type="hidden" name="signature" value="{{ episode.signature }}" />
                 <button class="btn-dope play-button active" type="submit">
                   Play
                 </button>
