--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -60,7 +60,7 @@
       </div>
     </div>
     <!-- PLAYER -->
-    <div class="container" id="player">
+    <div class="container-fluid" id="player">
       {% include 'player.html' %}
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
