--- a/index/static/style.css
+++ b/index/static/style.css
@@ -928,7 +928,7 @@ a:hover {
   background: rgba(0, 191, 165, 1);
   color: #fff;
 }
-/* TODO fix
+/* TODO episode rows buggy, fix pls
 tr.hover th {
 
 } */
