--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -51,12 +51,19 @@
         </div>
         <!-- CHARTS -->
         <div class="col-12 order-2 col-md-6 col-xl-3 order-xl-3" id="right">
+          <div class="row" id="last-played-header">
+            <div class="col-12">
+              <h1>
+                Last played
+              </h1>
+            </div>
+          </div>
           <div class="row" id="last-played">
             {% if last_played %}
               {% include 'last_played.html' %}
             {% endif %}
           </div>
-      </div>
+        </div>
       </div>
     </div>
     <!-- PLAYER -->
